--- a/src/components/AccordionComponent/Accordion.css
+++ b/src/components/AccordionComponent/Accordion.css
@@ -1,41 +1,10 @@
-.accordion {
-    width: 80%;
-    max-width: 800px;
-    margin: 0 auto;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    overflow: hidden;
-}
 
-.accordion-item {
-    border-bottom: 1px solid #ddd;
-}
-
-.accordion-title {
-    background-color: #f7f7f7;
-    cursor: pointer;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.accordion-title h3 {
-    margin: 0;
-}
-
-.accordion-content {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease;
-}
-
-.accordion-content p {
-    margin: 0;
-    padding: 15px;
-    background-color: #fff;
-}
-
-.accordion-content.active {
-    max-height: 200px; /* Ajusta esto según la altura de tu contenido */
-}
+.accordion-container {
+    width: 100%;
+    max-width:681px;
+    margin: 0 auto; 
+  }
+  
+  .accordion-item {
+    width: 100%;
+  }
